# blendmpc

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-deploy.yml  pypi-publish.yml
backends/: index.html
benchmark/distill_pendulum/: README.md  train.py
benchmark/distill_pendulum/results/: distill.csv
benchmark/quadruped_balance/: README.md  plot.py  train.py
benchmark/quadruped_balance/results/: mpc.csv  oracle.csv  residual.csv  scratch.csv
benchmark/quadruped_distill/: README.md  train.py
benchmark/quadruped_distill/results/: distill.csv
benchmark/quadruped_trot/: README.md  plot.py  render.py  train.py
benchmark/quadruped_trot/results/: mpc.csv  oracle.csv  residual.csv
benchmark/residual_pendulum/: README.md  plot.py  train.py
benchmark/residual_pendulum/results/: mpc.csv  residual.csv  scratch.csv
benchmark/terminal_pendulum/: README.md  train.py
benchmark/terminal_pendulum/results/: terminal.csv
benchmark/warmstart_pendulum/: README.md  train.py
benchmark/warmstart_pendulum/results/: warmstart.csv
benchmarks/: index.html
blends/distillation/: index.html
blends/residual/: index.html
blends/terminal-cost/: index.html
blends/warm-start/: index.html
changelog/: index.html
contributing/: index.html
docs/: backends.md  benchmarks.md  getting-started.md  index.md  papers.md
docs/blends/: distillation.md  residual.md  terminal-cost.md  warm-start.md
examples/: 01_residual_pendulum.py
getting-started/: index.html
papers/: index.html
search/: search_index.json
src/blendmpc/: __init__.py  core.py
src/blendmpc/blends/: __init__.py  distill.py  residual.py  terminal_cost.py  warm_start.py
src/blendmpc/envs/: go2.py  pendulum.py  pendulum_acados.py
src/blendmpc/solvers/: acados.py  crocoddyl.py
tests/: test_acados_backend.py  test_blends.py  test_go2.py
