[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "blendmpc"
version = "0.1.0.dev0"
description = "Composable blends of model predictive control and reinforcement learning for robotics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Assawayut K." }]
requires-python = ">=3.9"
dependencies = ["numpy", "gymnasium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
crocoddyl = ["crocoddyl>=3.0"]
test = ["pytest"]
docs = ["mkdocs-material"]

[project.urls]
Homepage = "https://github.com/assawayut/blendmpc"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
